--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,15 @@
   font-size: 50px;
 }
 
+.button {
+  margin: 5px;
+  background-color: 'whitesmoke'
+}
+
+.center.aligned {
+  text-align: center;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
