--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,10 @@
   text-align: center;
 }
 
+.bold{
+  font-weight: bold ;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
