--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,97 @@
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300&display=swap');
+
 .App {
-  text-align: center;
+  font-family: 'Nanum Gothic', sans-serif !important;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App-helloworld {
+  background-image: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) ),url('./images/study-789631_1920.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
+  position: relative;
+  height: 57vh;
+}
+
+@media ( min-width: 768px ) {
+  .App-first {
+    background-color: white;
+    height: 170px;
+    width: 90vw;
+    display: flex;
+    margin:0 auto;
+    flex-direction: column;
+    font-size: auto;
+    color: black;
+    font-family: 'Noto Sans KR', sans-serif !important;
+  }
+  
+  .App-second {
+    background-color: white;
+    height: 1000px;
+    width: 90vw;
+    display: flex;
+    margin:0 auto;
+    flex-direction: column;
+    font-size: auto;
+    color: black;
+    font-family: 'Noto Sans KR', sans-serif !important;
+  }
+}
+
+@media ( min-width: 1024px ) {
+  .App-first {
+    background-color: white;
+    height: 170px;
+    width: 77vw;
+    display: flex;
+    margin:0 auto;
+    flex-direction: column;
+    font-size: auto;
+    color: black;
+    font-family: 'Noto Sans KR', sans-serif !important;
+  }
+  
+  .App-second {
+    background-color: white;
+    height: 1000px;
+    width: 77vw;
+    display: flex;
+    margin:0 auto;
+    flex-direction: column;
+    font-size: auto;
+    color: black;
+    font-family: 'Noto Sans KR', sans-serif !important;
+  }
+}
+
+.App-first-container {
+  background-color: white;
+}
+
+.projects-image {
+  width: 100px;
+  height: 100px; 
+  border-radius: 17%;
+  overflow: hidden;
+  box-shadow:3px 3px 7px grey; 
+}
+
+.button {
+  margin: 5px;
+  background-color: 'whitesmoke'
+}
+
+.center.aligned {
+  text-align: center;
 }
 
 .App-link {
   color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
